--- a/build.gradle
+++ b/build.gradle
@@ -6,29 +6,29 @@ buildscript {
         // Versions for all the dependencies we plan to use. It's particularly useful for kotlin and
         // navigation where the versions of the plugin needs to be the same as the version of the
         // library defined in the app Gradle file
-        version_gradle = "4.0.1"
-        version_core = "1.3.1"
-        version_kotlin = "1.3.72"
-        version_kotlin_coroutines = "1.2.1"
+        version_gradle = '7.3.0'
+        version_core = '1.9.0'
+        version_kotlin = '1.7.20'
+        version_kotlin_coroutines = '1.6.4'
         version_lifecycle_extensions = "2.2.0"
-        version_moshi = "1.8.0"
-        version_navigation = "2.3.0"
-        version_constraint_layout = "2.0.0-rc1"
-        version_glide = "4.8.0"
-        version_retrofit = "2.5.0"
+        version_moshi = '1.14.0'
+        version_navigation = '2.5.2'
+        version_constraint_layout = '2.2.0-alpha04'
+        version_glide = '4.14.1'
+        version_retrofit = '2.9.0'
         version_retrofit_coroutines_adapter = "0.9.2"
-        version_recyclerview = "1.2.0-alpha05"
-        version_material = "1.1.0-alpha04"
-        version_play_services = "17.0.0"
+        version_recyclerview = '1.3.0-rc01'
+        version_material = '1.8.0-alpha01'
+        version_play_services = '20.0.0'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$version_gradle"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
     }
 }
@@ -36,7 +36,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
